# poc

./: .gitignore  Dockerfile  deployment.yaml  docker-compose.yml  pyproject.toml
