[tool.poetry]
name = "poc"
version = "0.1.0"
description = ""
authors = ["Karl Chami <karljoey.chami@broadsign.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
